[tool.poetry]
name = "data-science"
version = "0.1"
description = "Data Science and Data QnA Multi-Agent"
authors = ["Meltem Subasioglu <msubasioglu@google.com>"]
license = "Apache License 2.0"
readme = "README.md"
package-mode = true 


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
absl-py = "^2.2.2"
db-dtypes = "^1.4.2"
google-adk = ">0.0.1"
google-cloud-aiplatform = {extras = ["adk", "ag2", "agent-engines", "langchain", "llama-index"], version = "^1.89.0"}
immutabledict = "^4.2.1"
python-dotenv = "^1.0.1"
regex = "^2024.11.6"
sqlglot = "^26.10.1"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
google-auth = "^2.39.0"
ipykernel = "^6.29.5"
pytest = "^7.4.0"


[tool.pytest.ini_options]
console_output_style = "progress"
addopts = "-vv -s"
#addopts = "-vv -s --pdb"
testpaths = ["tests/"]
log_level="DEBUG"
log_cli=true
log_auto_indent=true
log_cli_date_format="%Y-%m-%d %H:%M:%S"
log_cli_format ="[%(asctime)s] %(levelname)s (%(funcName)s) \t [%(pathname)s:%(lineno)d] %(message)s"
filterwarnings = [
    #"error",
    "ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    #'ignore:function ham\(\) is deprecated:DeprecationWarning',
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

